syntax = "proto3";
package pb;

option go_package = "github.com/hosseintrz/torob/auth/pb";

message SignupRequest{
  string email = 1;
  string username = 2;
  string password = 3;
  string fullname = 4;
  enum Role{
    NORMAL = 0;
    ADMIN = 1;
    OWNER = 2;
  }
  Role role = 5;
}

message LoginRequest{
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string response = 1;
}

service auth{
  rpc Signup(SignupRequest) returns (AuthResponse){}
  rpc Login(LoginRequest) returns (AuthResponse){}
}


